--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,5 +4,6 @@ flwr==1.9.0
 numpy==1.26.4
 pandas==2.2.2
 scikit-learn==1.5.2
-supabase==2.6.0
+supabase==2.0.2
 python-dotenv==1.0.1
+httpx==0.24.1
